Align tagline to centre correctly

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -845,7 +845,7 @@
 				masthead-tagline: (
 					display: flex,
 					flex: 1 1 0%,
-					justify-content,
+					justify-content: center,
 					font-family: var(--font-family-primary),
 					text-align: center,
 				),
